# db

./: .gitignore  LICENSE  celcat.py  flake.nix  main.py  mypy.ini  pyproject.toml
cybot/: __main__.py  celcat.py  svg_calendar.py
discord/: __main__.py  celcat.py  config.py
tests/: test_cybot.py
