[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["Lucas Ransan <lucas@ransan.tk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
"discord.py" = "^1.6.0"
arrow = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
