[tool.poetry]
name = "cybot"
version = "0.1.0"
description = "A shitty Discord bot"
authors = ["Lucas Ransan <lucas@ransan.tk>"]
license = "MIT"

[tool.poetry.scripts]
cybot = "cybot.__main__:__main__"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
"discord.py" = "^1.6.0"
arrow = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
pylint = "^2.7.0"
black = "^20.8b1"
"discord.py-stubs" = "^1.6.0"
"discord-ext-typed-commands" = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
